Change history for HTTP::Tiny::Multipart
========================================

0.04  2015-06-05

      [BUGFIX]
      * Fix out-by-one error on last_boundary

      [DOCUMENTATION]
      * Small fixups for second pod example

0.03  2014-08-26

      add more documentation
      set content-type for fileuploads if a content-type is defined

0.02  2013-09-13T17:36:55

      return the parts of the body
      parts are a arrayref, need to deref when using join
      set the filename for fileuploads

0.01  2013-09-13T16:47:32

      initial release